trying to fix text wrap in grid practice

--- a/week6_assignment/positionstyles.css
+++ b/week6_assignment/positionstyles.css
@@ -129,6 +129,8 @@
 .content5 {
   /* This is the parent of the activity 5 boxes. */
   height: 400px;
+  max-width: 1600px;
+  margin: 0 auto;
 }
 .red5 { 
   width: 100%; 
@@ -146,9 +148,10 @@
   width: 100%; 
   height: 100%; 
   background-color: gold;
-  align-items: stretch;
-  text-align: left;
 } 
+div .yellow5 {
+  font-size: 24.1px;
+}
 .blue5 {
   width: 100%; 
   height: 100px; 
